--- a/UI/transaction.html
+++ b/UI/transaction.html
@@ -31,7 +31,7 @@
     <section id="transaction" class="container account-details">
       <h3 class="trans-section-title">
         Transaction Details
-        <a href="dashboard.html"><button id="trans-bck-btn">Back</button></a>
+        <a href="./transaction_history.html"><button id="trans-bck-btn">Back</button></a>
       </h3>
       <div class="details-div">
         <div class="display-full-div">
