--- a/UI/signup.html
+++ b/UI/signup.html
@@ -33,28 +33,25 @@
         <h2 class="form-title">Step 1: Register As A Banka User</h2>
         <form>
           <div>
-            <div class="display-half-div left-side">
-              <input type="text" placeholder="First Name" pattern="[a-zA-Z]{2,15}"
-                title="Alphabets only. Max 15 characters" required />
-            </div>
-            <div class="display-half-div right-side">
-              <input type="text" placeholder="Last Name" pattern="[a-zA-Z]{2,15}"
-                title="Alphabets only. Max 15 characters" required />
-            </div>
+            <input type="text" placeholder="First Name" pattern="[a-zA-Z]{2,15}"
+              title="Alphabets only. Max 15 characters" required />
+          </div>
+          <div>
+            <input type="text" placeholder="Last Name" pattern="[a-zA-Z]{2,15}"
+              title="Alphabets only. Max 15 characters" required />
           </div>
           <input type="email" placeholder="Email" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
             title="Must follow standard email format" required />
           <div>
-            <div class="display-half-div left-side">
-              <input type="password" placeholder="Password" name="password" pattern=".{6,10}"
-                title="Must be between Six(6) to Ten(10) characters" required />
-            </div>
-            <div class="display-half-div right-side">
-              <input type="password" placeholder="Confirm Password" name="password" pattern=".{6,10}"
-                title="Must be between Six(6) to Ten(10) characters" required />
-            </div>
+            <input type="password" placeholder="Password" name="password" pattern=".{6,10}"
+              title="Must be between Six(6) to Ten(10) characters" required />
+          </div>
+          <div>
+            <input type="password" placeholder="Confirm Password" name="password" pattern=".{6,10}"
+              title="Must be between Six(6) to Ten(10) characters" required />
           </div>
         </form>
+        <!-- <button class="form-button" type="submit">Sign Up</button> -->
         <!-- I placed the button here so that it doesn't submit the form just yet,
           but should rather serve as a link to the Create Account page -->
         <a href="create_account.html"><button class="form-button">Sign Up</button></a>
