--- a/UI/transaction_history.html
+++ b/UI/transaction_history.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>Banka | Accounts List</title>
+    <title>Banka | Transaction History</title>
 </head>
 
 <body>
@@ -31,7 +31,71 @@
         <div id="transaction-history-overlay">
             <div id="transaction-history-overlay-content">
                 <h3 class="modal-title">Transaction Details <i id="close-modal" class="fas fa-times"></i></h3>
-                <div>
+                <div class="modal-full-div">
+                    <div class="modal-half-div">
+                        <p><span>Created On:</span></p>
+                    </div>
+                    <div class="modal-half-div">
+                        <p>24th March 2019</p>
+                    </div>
+                </div>
+                <div class="modal-full-div">
+                    <div class="modal-half-div">
+                        <p><span>ID:</span></p>
+                    </div>
+                    <div class="modal-half-div">
+                        <p>012457</p>
+                    </div>
+                </div>
+                <div class="modal-full-div">
+                    <div class="modal-half-div">
+                        <p><span>Account Number:</span></p>
+                    </div>
+                    <div class="modal-half-div">
+                        <p>2058946251</p>
+                    </div>
+                </div>
+                <div class="modal-full-div">
+                    <div class="modal-half-div">
+                        <p><span>Type:</span></p>
+                    </div>
+                    <div class="modal-half-div">
+                        <p>Credit</p>
+                    </div>
+                </div>
+                <div class="modal-full-div">
+                    <div class="modal-half-div">
+                        <p><span>Cashier:</span></p>
+                    </div>
+                    <div class="modal-half-div">
+                        <p>Mary</p>
+                    </div>
+                </div>
+                <div class="modal-full-div">
+                    <div class="modal-half-div">
+                        <p><span>Amount:</span></p>
+                    </div>
+                    <div class="modal-half-div">
+                        <p>N12,000.00</p>
+                    </div>
+                </div>
+                <div class="modal-full-div">
+                    <div class="modal-half-div">
+                        <p><span>Old Balance:</span></p>
+                    </div>
+                    <div class="modal-half-div">
+                        <p>N13,560,000.00</p>
+                    </div>
+                </div>
+                <div class="modal-full-div">
+                    <div class="modal-half-div">
+                        <p><span>New Balance:</span></p>
+                    </div>
+                    <div class="modal-half-div">
+                        <p>N13,572,000.00</p>
+                    </div>
+                </div>
+                <!-- <div>
                     <p><span>Created On:</span> 24th March 2019</p>
                 </div>
                 <div>
@@ -55,7 +119,7 @@
                 </div>
                 <div>
                     <p><span>New Balance:</span> N13,572,000.00</p>
-                </div>
+                </div> -->
             </div>
         </div>
         <section id="accounts-list" class="container">
