chore(user views):differenciate user views based on roles
[Finishes #165464623]

--- a/UI/admin_dashboard.html
+++ b/UI/admin_dashboard.html
@@ -15,7 +15,7 @@
   <header>
     <div class="container">
       <div id="header-title">
-        <a href="accounts_list.html">
+        <a href="admin_dashboard.html">
           <h1>Banka</h1>
         </a>
       </div>
@@ -29,15 +29,6 @@
     </div>
   </header>
   <main>
-    <!-- <section id="staff-navbar">
-      <div class="container">
-        <a href="cr_admin_staff.html"><i class="fas fa-plus"></i> New Staff</a>
-        <div class="bnk-ops">
-          <a href="credit_user.html">Deposit</a>
-          <a href="debit_user.html">Withdrawal</a>
-        </div>
-      </div>
-    </section> -->
     <section id="accounts-list" class="container">
       <h3 id="dashboard-main-title" class="dashboard-section-title">
         Accounts List
@@ -52,7 +43,7 @@
         </div>
         <div class="acc-list-details">
           <ul>
-            <a href="bank_account_record.html">
+            <a href="bank_account_record_admin.html">
               <li>
                 <div class="indiv-acc display-full-div">
                   <p class="acc-list-val-0">0034</p>
@@ -62,7 +53,7 @@
                 </div>
               </li>
             </a>
-            <a href="bank_account_record.html">
+            <a href="bank_account_record_admin.html">
               <li>
                 <div class="indiv-acc display-full-div">
                   <p class="acc-list-val-0">0104</p>
@@ -72,7 +63,7 @@
                 </div>
               </li>
             </a>
-            <a href="bank_account_record.html">
+            <a href="bank_account_record_admin.html">
               <li>
                 <div class="indiv-acc display-full-div">
                   <p class="acc-list-val-0">0649</p>
@@ -82,7 +73,7 @@
                 </div>
               </li>
             </a>
-            <a href="bank_account_record.html">
+            <a href="bank_account_record_admin.html">
               <li>
                 <div class="indiv-acc display-full-div">
                   <p class="acc-list-val-0">0209</p>
@@ -93,7 +84,7 @@
               </li>
             </a>
 
-            <a href="bank_account_record.html">
+            <a href="bank_account_record_admin.html">
               <li>
                 <div class="indiv-acc display-full-div">
                   <p class="acc-list-val-0">0034</p>
@@ -103,7 +94,7 @@
                 </div>
               </li>
             </a>
-            <a href="bank_account_record.html">
+            <a href="bank_account_record_admin.html">
               <li>
                 <div class="indiv-acc display-full-div">
                   <p class="acc-list-val-0">0104</p>
@@ -113,7 +104,7 @@
                 </div>
               </li>
             </a>
-            <a href="bank_account_record.html">
+            <a href="bank_account_record_admin.html">
               <li>
                 <div class="indiv-acc display-full-div">
                   <p class="acc-list-val-0">0649</p>
@@ -123,7 +114,7 @@
                 </div>
               </li>
             </a>
-            <a href="bank_account_record.html">
+            <a href="bank_account_record_admin.html">
               <li>
                 <div class="indiv-acc display-full-div">
                   <p class="acc-list-val-0">0649</p>
@@ -133,7 +124,7 @@
                 </div>
               </li>
             </a>
-            <a href="bank_account_record.html">
+            <a href="bank_account_record_admin.html">
               <li>
                 <div class="indiv-acc display-full-div">
                   <p class="acc-list-val-0">0649</p>
