--- a/UI/bank_account_record_cashier.html
+++ b/UI/bank_account_record_cashier.html
@@ -15,14 +15,14 @@
   <header>
     <div class="container">
       <div id="header-title">
-        <a href="accounts_list.html">
+        <a href="cashier_dashboard.html">
           <h1>Banka</h1>
         </a>
       </div>
       <div id="header-links">
         <a class="pre-login-link unused-link" href="#">Sign Up</a>
         <a class="pre-login-link unused-link" href="#">Login</a>
-        <p><i class="far fa-user"></i> Admin</p>
+        <p><i class="far fa-user"></i> Cashier</p>
         <a id="logout" href="index.html">Logout</a>
       </div>
     </div>
@@ -61,7 +61,7 @@
       <h3 class="dashboard-section-title">
         Account Details
 
-        <a href="./transaction_history.html"><i id="list-icon" title="View User's transaction history"
+        <a href="./transaction_history_cashier.html"><i id="list-icon" title="View User's transaction history"
             class="far fa-list-alt"></i></a>
         <i class="far fa-credit-card" id="credit-card-icon" title="Perform banking operations on user's account"></i>
         <!-- <a href="accounts_list.html"><button class="acc-rec-bck-btn">Back</button></a> -->
@@ -157,7 +157,7 @@
   <footer>
     <p>Banka, Copyright &copy; 2019</p>
   </footer>
-  <script src="./assets/js/bankAccountRecordScript.js"></script>
+  <script src="./assets/js/bankAccountRecordCashierScript.js"></script>
 </body>
 
 </html>
