--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -44,8 +44,11 @@
         <!-- I placed the button here so that it doesn't submit the form just yet,
           but should rather serve as a link to the Dashboard page -->
         <a href="dashboard.html"><button class="form-button">Login</button></a>
-        <a href="accounts_list.html">
-          <p id="admin-link">Admin or Staff? Click Here!</p>
+        <a href="admin_dashboard.html">
+          <p id="admin-link">Admin? Click Here!</p>
+        </a>
+        <a href="cashier_dashboard.html">
+          <p id="admin-link">Cashier? Click Here!</p>
         </a>
       </div>
     </section>
