--- a/UI/transaction_history_admin.html
+++ b/UI/transaction_history_admin.html
@@ -15,14 +15,14 @@
     <header>
         <div class="container">
             <div id="header-title">
-                <a href="dashboard.html">
+                <a href="bank_account_record_admin.html">
                     <h1>Banka</h1>
                 </a>
             </div>
             <div id="header-links">
                 <a class="pre-login-link unused-link" href="signup.html">Sign Up</a>
                 <a class="pre-login-link unused-link" href="sign_in.html">Login</a>
-                <p><i class="far fa-user"></i> Osaukhumwen</p>
+                <p><i class="far fa-user"></i> Admin</p>
                 <a id="logout" href="index.html">Logout</a>
             </div>
         </div>
