--- a/UI/bank_account_record_admin.html
+++ b/UI/bank_account_record_admin.html
@@ -15,7 +15,7 @@
   <header>
     <div class="container">
       <div id="header-title">
-        <a href="accounts_list.html">
+        <a href="admin_dashboard.html">
           <h1>Banka</h1>
         </a>
       </div>
