feat(fetch-api getAccounts):implement front-end logic for view all accounts
[Finishes #165912674]

--- a/UI/admin_dashboard.html
+++ b/UI/admin_dashboard.html
@@ -36,104 +36,14 @@
 
       <div class="accounts-list-div">
         <div class="display-full-div">
-          <p class="acc-list-title acc-list-val-0">id</p>
-          <p class="acc-list-title acc-list-val-1">a/c num</p>
-          <p class="acc-list-title acc-list-val-2">account name</p>
+          <p class="acc-list-title acc-list-val">a/c num</p>
+          <p class="acc-list-title acc-list-val-1">account name</p>
+          <p class="acc-list-title acc-list-val">balance</p>
           <p class="acc-list-title acc-list-val-0">type</p>
         </div>
         <div class="acc-list-details">
-          <ul>
-            <a href="bank_account_record_admin.html">
-              <li>
-                <div class="indiv-acc display-full-div">
-                  <p class="acc-list-val-0">0034</p>
-                  <p class="acc-list-val-1">2031279458</p>
-                  <p class="acc-list-val-2">Sundar Pichai</p>
-                  <p class="acc-list-val-0">Savings</p>
-                </div>
-              </li>
-            </a>
-            <a href="bank_account_record_admin.html">
-              <li>
-                <div class="indiv-acc display-full-div">
-                  <p class="acc-list-val-0">0104</p>
-                  <p class="acc-list-val-1">1087673271</p>
-                  <p class="acc-list-val-2">Jermaine Cole</p>
-                  <p class="acc-list-val-0">Current</p>
-                </div>
-              </li>
-            </a>
-            <a href="bank_account_record_admin.html">
-              <li>
-                <div class="indiv-acc display-full-div">
-                  <p class="acc-list-val-0">0649</p>
-                  <p class="acc-list-val-1">1065892356</p>
-                  <p class="acc-list-val-2">Cristiano Ronaldo</p>
-                  <p class="acc-list-val-0">Current</p>
-                </div>
-              </li>
-            </a>
-            <a href="bank_account_record_admin.html">
-              <li>
-                <div class="indiv-acc display-full-div">
-                  <p class="acc-list-val-0">0209</p>
-                  <p class="acc-list-val-1">2017984635</p>
-                  <p class="acc-list-val-2">Wiz Khalifa</p>
-                  <p class="acc-list-val-0">Savings</p>
-                </div>
-              </li>
-            </a>
-
-            <a href="bank_account_record_admin.html">
-              <li>
-                <div class="indiv-acc display-full-div">
-                  <p class="acc-list-val-0">0034</p>
-                  <p class="acc-list-val-1">20312794587</p>
-                  <p class="acc-list-val-2">Eden Hazard</p>
-                  <p class="acc-list-val-0">Savings</p>
-                </div>
-              </li>
-            </a>
-            <a href="bank_account_record_admin.html">
-              <li>
-                <div class="indiv-acc display-full-div">
-                  <p class="acc-list-val-0">0104</p>
-                  <p class="acc-list-val-1">1087673271</p>
-                  <p class="acc-list-val-2">Satya Nadella</p>
-                  <p class="acc-list-val-0">Current</p>
-                </div>
-              </li>
-            </a>
-            <a href="bank_account_record_admin.html">
-              <li>
-                <div class="indiv-acc display-full-div">
-                  <p class="acc-list-val-0">0649</p>
-                  <p class="acc-list-val-1">1065892356</p>
-                  <p class="acc-list-val-2">Blake Lively</p>
-                  <p class="acc-list-val-0">Current</p>
-                </div>
-              </li>
-            </a>
-            <a href="bank_account_record_admin.html">
-              <li>
-                <div class="indiv-acc display-full-div">
-                  <p class="acc-list-val-0">0649</p>
-                  <p class="acc-list-val-1">1065892356</p>
-                  <p class="acc-list-val-2">Mohini Ufeli</p>
-                  <p class="acc-list-val-0">Current</p>
-                </div>
-              </li>
-            </a>
-            <a href="bank_account_record_admin.html">
-              <li>
-                <div class="indiv-acc display-full-div">
-                  <p class="acc-list-val-0">0649</p>
-                  <p class="acc-list-val-1">1065892356</p>
-                  <p class="acc-list-val-2">Jeff Bezos</p>
-                  <p class="acc-list-val-0">Current</p>
-                </div>
-              </li>
-            </a>
+          <ul id="accounts">
+            
           </ul>
         </div>
       </div>
@@ -142,6 +52,7 @@
   <footer>
     <p>Banka, Copyright &copy; 2019</p>
   </footer>
+  <script src="./assets/js/Fetch_API/viewAllAccounts.js"></script>
 </body>
 
 </html>
