feat(fetch-api account-details):implement front-end logic for viewing account details
[Finishes #165956578]

--- a/UI/bank_account_record_cashier.html
+++ b/UI/bank_account_record_cashier.html
@@ -69,35 +69,35 @@
       <div class="details-div" id="overlay_show">
         <div class="display-full-div">
           <div class="display-half-div left-side">
-            <p><span>Account ID:</span> 010395</p>
+            <p id="accountId"> </p>
           </div>
           <div class="display-half-div right-side">
-            <p><span>Account Number:</span> 2057483546</p>
+            <p id="accountNumber"> </p>
           </div>
         </div>
 
         <div class="display-full-div">
           <div class="display-half-div left-side">
-            <p><span>Owner:</span> 2167895</p>
+            <p id="ownerId"> </p>
           </div>
           <div class="display-half-div right-side">
-            <p><span>Created On:</span> 24th March 2019</p>
+            <p id="createdOn"> </p>
           </div>
         </div>
 
         <div class="display-full-div">
           <div class="display-half-div left-side">
-            <p><span>Type:</span> Savings</p>
+            <p id="accountType"> </p>
           </div>
           <div class="display-half-div right-side">
-            <p><span>Status:</span> Active</p>
+            <p id="accountStatus"> </p>
           </div>
         </div>
 
         <div class="display-full-div">
           <div class="display-half-div left-side">
-            <p>
-              <span>Total Balance:</span> N2,600,000.00
+            <p id="totalBalance">
+              
             </p>
           </div>
           <div class="display-half-div left-side">
@@ -118,37 +118,37 @@
       <div class="details-div">
         <div class="display-full-div">
           <div class="display-half-div left-side">
-            <p><span>First Name:</span> Osaukhumwen</p>
+            <p id="firstName"> </p>
           </div>
           <div class="display-half-div right-side">
-            <p><span>Last Name:</span> Iyamuosa</p>
+            <p id="lastName"> </p>
           </div>
         </div>
 
         <div class="display-full-div">
           <div class="display-half-div left-side">
-            <p><span>Gender:</span> Male</p>
+            <p id="gender"><span>Gender:</span> </p>
           </div>
           <div class="display-half-div right-side">
-            <p><span>Age:</span> 22</p>
+            <p id="age"><span>Age:</span> </p>
           </div>
         </div>
 
         <div class="display-full-div">
           <div class="display-half-div left-side">
-            <p><span>Email:</span> osaukhu.bi@gmail.com</p>
+            <p id="email"> </p>
           </div>
           <div class="display-half-div right-side">
-            <p><span>Phone Number:</span> 07068412039</p>
+            <p id="phoneNumber"><span>Phone Number:</span> </p>
           </div>
         </div>
 
         <div class="display-full-div">
           <div class="display-half-div left-side">
-            <p><span>City:</span> Benin</p>
+            <p id="city"><span>City:</span> </p>
           </div>
           <div class="display-half-div right-side">
-            <p><span>State:</span> Edo</p>
+            <p id="state"><span>State:</span> </p>
           </div>
         </div>
       </div>
@@ -158,6 +158,7 @@
     <p>Banka, Copyright &copy; 2019</p>
   </footer>
   <script src="./assets/js/bankAccountRecordCashierScript.js"></script>
+  <script src="./assets/js/Fetch_API/accountDetails.js"></script>
 </body>
 
 </html>
