feat(fetch activate-deactivate):implement activation and deactivation front-end logic
[Finishes #166020299]

--- a/UI/bank_account_record_admin.html
+++ b/UI/bank_account_record_admin.html
@@ -103,9 +103,9 @@
             <button class="acc-rec-btn delete-acc-btn" type="submit">
               Delete Account
             </button>
-            <form>
-              <button class="acc-rec-btn acc-rec-activate-btn" type="submit">
-                Deactivate
+            <form id="activateDeactivateForm">
+              <button id="activateDeactivateButton" class="acc-rec-btn acc-rec-activate-btn" type="submit">
+                
               </button>
             </form>
           </div>
