feat(fetch deleteAccount):implement delete-account logic on the front-end
[Finishes #166021110]

--- a/UI/bank_account_record_cashier.html
+++ b/UI/bank_account_record_cashier.html
@@ -48,14 +48,9 @@
       </div>
       <div id="delete-account-modal">
         <p>Are you sure you want to delete this account?</p>
-        <form><button id="yes">Yes</button></form>
+        <form id="deleteAccountForm"><button id="yes" type="submit">Yes</button></form>
         <form><button id="no">No</button></form>
       </div>
-    </div>
-    <div id="delete-account-modal">
-      <p>Are you sure you want to delete this account?</p>
-      <form><button id="yes">Yes</button></form>
-      <form><button id="no">No</button></form>
     </div>
     <section id="account-record" class="container account-details">
       <h3 class="dashboard-section-title">
