feat(fetch transaction-history):implement transaction history functionality on the front-end
[Finishes #166049878]

--- a/UI/transaction_history_admin.html
+++ b/UI/transaction_history_admin.html
@@ -110,88 +110,20 @@
                     <p class="acc-list-title">balance</p>
                 </div>
                 <div class="acc-list-details">
-                    <ul>
-                        <li>
-                            <div class="indiv-trans display-full-div">
-                                <p>01-01-2019</p>
-                                <p>Credit</p>
-                                <p>20,000</p>
-                                <p>1,650,000</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="indiv-trans display-full-div">
-                                <p>01-01-2019</p>
-                                <p>Credit</p>
-                                <p>20,000</p>
-                                <p>1,650,000</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="indiv-trans display-full-div">
-                                <p>01-01-2019</p>
-                                <p>Credit</p>
-                                <p>20,000</p>
-                                <p>1,650,000</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="indiv-trans display-full-div">
-                                <p>01-01-2019</p>
-                                <p>Credit</p>
-                                <p>20,000</p>
-                                <p>1,650,000</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="indiv-trans display-full-div">
-                                <p>01-01-2019</p>
-                                <p>Credit</p>
-                                <p>20,000</p>
-                                <p>1,650,000</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="indiv-trans display-full-div">
-                                <p>01-01-2019</p>
-                                <p>Credit</p>
-                                <p>20,000</p>
-                                <p>1,650,000</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="indiv-trans display-full-div">
-                                <p>01-01-2019</p>
-                                <p>Credit</p>
-                                <p>20,000</p>
-                                <p>1,650,000</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="indiv-trans display-full-div">
-                                <p>01-01-2019</p>
-                                <p>Credit</p>
-                                <p>20,000</p>
-                                <p>1,650,000</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="indiv-trans display-full-div">
-                                <p>01-01-2019</p>
-                                <p>Credit</p>
-                                <p>20,000</p>
-                                <p>1,650,000</p>
-                            </div>
-                        </li>
+                    <ul id="transactions">
+                        
                     </ul>
                 </div>
             </div>
+
+            <p id="view-more">View More</p>
         </section>
     </main>
     <footer>
         <p>Banka, Copyright &copy; 2019</p>
     </footer>
     <script src="./assets/js/transactionHistory.js"></script>
+    <script src="./assets/js/Fetch_API/transactionHistory.js"></script>
 </body>
 
 </html>
