feat(minor-changes):add some minor changes

--- a/UI/sign_in.html
+++ b/UI/sign_in.html
@@ -40,7 +40,7 @@
             <input id="password" type="password" placeholder="Password" pattern=".{6,10}"
               title="Must be between Six(6) to Ten(10) characters" required />
           </div>
-          <button class="form-button">Login</button>
+          <button type="submit" class="form-button">Login</button>
         </form>
         <p id="message"></p>
       </div>
